Added prefix to all docs route
